--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -103,6 +103,7 @@ nav:
     - TAC Governance:
       - Roles and Responsibilities: governance/roles-and-responsibilities.md
       - TAC Alternate Policy: governance/alternate-policy.md
+      - Elections: governance/elections.md
       - Project Lifecycle: governance/project-lifecycle.md
       - Special Interest Groups: governance/special-interest-group-process.md
       - Task Forces: governance/task-force-process.md
